--- a/public/assets/css/pages/home.css
+++ b/public/assets/css/pages/home.css
@@ -1,6 +1,28 @@
+#precontent {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+}
+
+#precontent .group {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: fit-content;
+}
+
+#precontent .group label {
+    min-width: 115px;
+}
+
+#precontent .group p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
 .wrapper{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    display: flex;
+    flex-direction: row;
     justify-content: space-between;
 }
 
@@ -18,17 +40,56 @@
     align-items: flex-start;
 }
 
-.outingTable{
+.outingTable {
     table-layout: fixed;
-    border-collapse: collapse;
+    border-collapse: separate;
+    border-spacing: 0 8px;
+    margin-top: 16px;
 }
 
-.titles{
-    background-color: gray;
+.outingTable thead {
+    background-color: var(--primary-color);
+    color: white;
     width: auto;
     font-size: large;
 }
 
-.outingList{
+.outingTable th {
+    padding: 12px;
+}
+
+.outingTable th:first-of-type,
+.outingList tr td:first-of-type {
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+}
+
+.outingTable th:last-of-type,
+.outingList tr td:last-of-type {
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
+.outingList {
     text-align: center;
+}
+
+.outingList tr {
+    height: 60px;
+    border-radius: 20px;
+}
+
+.outingList tr:hover {
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+
+.outingList tr td {
+    padding: 12px;
+}
+
+#home-actions {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
 }
