--- a/public/assets/css/pages/login.css
+++ b/public/assets/css/pages/login.css
@@ -51,3 +51,13 @@
     text-align: center;
     margin-bottom: 10px;
 }
+
+@media screen and (max-device-width: 425px) {
+    #form-bottom {
+        flex-direction: column;
+    }
+
+    #form-options {
+        margin-top: 16px;
+    }
+}
