--- a/templates/fragments/_navbar.html.twig
+++ b/templates/fragments/_navbar.html.twig
@@ -5,12 +5,12 @@
     {% if app.user %}
     <div id="navbar-right">
         <ul>
-            <li><a href="{{ path('accueil') }}">Accueil</a></li>
-            <li><a href="{{ path('show_profile', { username: app.user.nickName }) }}">Mon profil</a></li>
+            <li{{ app.request.get('_route') == 'accueil' ? ' class="active"' }}><a href="{{ path('accueil') }}">Accueil</a></li>
+            <li{{ (app.request.get('_route') == 'show_profile' and app.user.nickName in app.request.attributes.get('_route_params')) or app.request.get('_route') == 'edit_profile' ? ' class="active"' }}><a href="{{ path('show_profile', { username: app.user.nickName }) }}">Mon profil</a></li>
             {% if app.user.isAdmin %}
                 {% set townUrl = ea_url().setController('App\\Controller\\Admin\\TownCrudController') %}
                 {% set campusUrl = ea_url().setController('App\\Controller\\Admin\\CampusCrudController') %}
-                <li><a href="{{ path('admin') }}">Panneau d'administration</a></li>
+                {#<li><a href="{{ path('admin') }}">Panneau d'administration</a></li>#}
                 <li><a href="{{ townUrl }}">Villes</a></li>
                 <li><a href="{{ campusUrl }}">Campus</a></li>
             {% endif %}
