--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -8,55 +8,113 @@
 
 
 {% block body %}
-
-    <h3>Filtrer les sorties</h3>
-
-    <form id="outing-form" method="get">
-
-        {{ form_start(outingForm) }}
-        <div class="wrapper">
-            <div class="form-left">
-                <div>
-                    {{ form_row(outingForm.campus) }}
-                    {{ form_row(outingForm.name) }}
-                    {{ form_row(outingForm.startAt) }}
-                    {{ form_row(outingForm.limitSubscriptionDate) }}
-                </div>
-
-            </div>
-
-            <div class="form-right">
-                <div>
-                    {{ form_row(outingForm.organizer) }}
-                    {{ form_row(outingForm.subscribed) }}
-                    {{ form_row(outingForm.unsubscribed) }}
-                    {{ form_row(outingForm.passed) }}
-                </div>
-            </div>
-            <div class="search">
-                <button type="submit" title="search">Rechercher</button>
-            </div>
+    <div id="precontent">
+        <div class="group">
+            <label>Date du jour :</label>
+            <p>{{ 'now'|date('d/m/Y') }}</p>
         </div>
+        <div class="group">
+            <label>Participant :</label>
+            <p>{{ app.user.firstName }} {{ app.user.lastName|slice(0, 1) }}.</p>
+        </div>
+    </div>
+    <div id="main-content">
+        <h3>Filtrer les sorties</h3>
+        <form id="outing-form" method="get">
+            {{ form_start(outingForm) }}
+            <div class="wrapper">
+                <div class="form-left">
+                    <div>
+                        <div class="form-error">
+                            {{ form_errors(outingForm.campus) }}
+                        </div>
+                        <div class="input-wrapper">
+                            <label>{{ form_label(outingForm.campus) }} :</label>
+                            {{ form_widget(outingForm.campus) }}
+                        </div>
 
-        {{ form_end(outingForm) }}
+                        <div class="form-error">
+                            {{ form_errors(outingForm.name) }}
+                        </div>
+                        <div class="input-wrapper">
+                            <label>{{ form_label(outingForm.name) }} :</label>
+                            {{ form_widget(outingForm.name) }}
+                        </div>
 
-    </form>
+                        <div class="form-error">
+                            {{ form_errors(outingForm.startAt) }}
+                        </div>
+                        <div class="input-wrapper">
+                            <label>{{ form_label(outingForm.startAt) }} :</label>
+                            {{ form_widget(outingForm.startAt) }}
+                        </div>
 
-    <div>
-        <table class="outingTable table-striped table-bordered" style="width:100%">
-            <thead class="titles">
-            <tr>
-                <th>Nom de la sortie</th>
-                <th>Date de la sortie</th>
-                <th>Clôture</th>
-                <th>Inscrits / Places</th>
-                <th>Etat</th>
-                <th>Inscrit</th>
-                <th>Organisateur</th>
-                <th>Actions</th>
-            </tr>
-            </thead>
-            <tbody class="outingList">
+                        <div class="form-error">
+                            {{ form_errors(outingForm.limitSubscriptionDate) }}
+                        </div>
+                        <div class="input-wrapper">
+                            <label>{{ form_label(outingForm.limitSubscriptionDate) }} :</label>
+                            {{ form_widget(outingForm.limitSubscriptionDate) }}
+                        </div>
+                    </div>
+                </div>
+                <div class="form-right">
+                    <div>
+                        <div class="form-error">
+                            {{ form_errors(outingForm.organizer) }}
+                        </div>
+                        <div class="checkbox-wrapper">
+                            {{ form_widget(outingForm.organizer) }}
+                            <label>{{ form_label(outingForm.organizer) }}</label>
+                        </div>
+
+                        <div class="form-error">
+                            {{ form_errors(outingForm.subscribed) }}
+                        </div>
+                        <div class="checkbox-wrapper">
+                            {{ form_widget(outingForm.subscribed) }}
+                            <label>{{ form_label(outingForm.subscribed) }}</label>
+                        </div>
+
+                        <div class="form-error">
+                            {{ form_errors(outingForm.unsubscribed) }}
+                        </div>
+                        <div class="checkbox-wrapper">
+                            {{ form_widget(outingForm.unsubscribed) }}
+                            <label>{{ form_label(outingForm.unsubscribed) }}</label>
+                        </div>
+
+                        <div class="form-error">
+                            {{ form_errors(outingForm.passed) }}
+                        </div>
+                        <div class="checkbox-wrapper">
+                            {{ form_widget(outingForm.passed) }}
+                            <label>{{ form_label(outingForm.passed) }}</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="search">
+                    <button type="submit" title="search">Rechercher</button>
+                </div>
+            </div>
+            {{ form_end(outingForm) }}
+        </form>
+
+        <div>
+            <table class="outingTable table-striped table-bordered" style="width:100%">
+                <thead class="titles">
+                <tr>
+                    <th>Nom de la sortie</th>
+                    <th>Date de la sortie</th>
+                    <th>Clôture</th>
+                    <th>Inscrits / Places</th>
+                    <th>Etat</th>
+                    <th>Inscrit</th>
+                    <th>Organisateur</th>
+                    <th>Actions</th>
+                </tr>
+                </thead>
+                <tbody class="outingList">
 
                 {# foreach outing #}
                 {% for outing in outings %}
@@ -75,7 +133,7 @@
                             <td class="text-success">
 
                                 {% if app.user in outing.users %}
-                                <a title="inscrit">X</a>
+                                    <a title="inscrit">X</a>
                                 {% endif %}
                             </td>
                             <td><a href="{{ path('show_profile', { username: outing.organizer.nickName }) }}">{{ outing.organizer.firstName }} {{ outing.organizer.lastName|slice(0, 1) }}.</a></td>
@@ -108,15 +166,13 @@
                         <th class="text-center text-muted" scope="row" colspan="8">Aucun événement trouvé...</th>
                     </tr>
                 {% endfor %}
-
-
-
-
-
-            </tbody>
-        </table>
+                </tbody>
+            </table>
+        </div>
+        <div id="home-actions">
+            <a href="{{ path('outing_creation') }}">
+                <button type="button">Créer une sortie</button>
+            </a>
+        </div>
     </div>
-    <a href="{{ path('outing_creation') }}">
-        <input type="button" value="Créer une sortie">
-    </a>
 {% endblock %}
