--- a/templates/outing_creation/outing_creation.html.twig
+++ b/templates/outing_creation/outing_creation.html.twig
@@ -1,11 +1,16 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Nouvelle sortie{% endblock %}
+
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('assets/css/pages/outing_forms.css') }}">
+{% endblock %}
+
 {% block javascripts %}
     {{ parent() }}
     <script>
-        function confirmCancel(){
-            if(confirm('Souhaitez-vous vraiment annuler l\'opération ?')){
+        function confirmCancel() {
+            if (confirm('Souhaitez-vous vraiment annuler l\'opération ?')) {
                 window.location.href = '{{ path('accueil') }}';
             }
         }
@@ -13,42 +18,91 @@
 
     <script src="{{ asset('assets/js/pages/outing_form.js') }}"></script>
 {% endblock %}
+
 {% block body %}
-<div class="create-form">
-    {{ form_start(outingCreationForm) }}
+    {% set addPlacesUrl = ea_url().setController('App\\Controller\\Admin\\PlaceCrudController').setAction('new') %}
+    <div class="create-form">
+        <h1>Créer une sortie</h1>
+        {{ form_start(outingCreationForm) }}
 
-    <div>
-        {{ form_errors(outingCreationForm) }}
+        <div>
+            {{ form_errors(outingCreationForm) }}
+        </div>
+        <div id="form-inputs">
+            <div id="left-part">
+                <div class="input-wrapper">
+                    <label>{{ form_label(outingCreationForm.name) }} :</label>
+                    {{ form_widget(outingCreationForm.name) }}
+                </div>
+                <div class="input-wrapper">
+                    <label>{{ form_label(outingCreationForm.startAt) }} :</label>
+                    {{ form_widget(outingCreationForm.startAt) }}
+                </div>
+                <div class="input-wrapper">
+                    <label>{{ form_label(outingCreationForm.limitSubscriptionDate) }} :</label>
+                    {{ form_widget(outingCreationForm.limitSubscriptionDate) }}
+                </div>
+                <div class="input-wrapper">
+                    <label>{{ form_label(outingCreationForm.maxUsers) }} :</label>
+                    {{ form_widget(outingCreationForm.maxUsers) }}
+                </div>
+                <div class="input-wrapper">
+                    <label>{{ form_label(outingCreationForm.duration) }} :</label>
+                    {{ form_widget(outingCreationForm.duration) }}
+                </div>
+                <div class="input-wrapper">
+                    <label>{{ form_label(outingCreationForm.about) }} :</label>
+                    {{ form_widget(outingCreationForm.about) }}
+                </div>
+            </div>
+
+            <div id="right-part">
+                <div class="input-wrapper">
+                    <label>{{ form_label(outingCreationForm.campus) }} :</label>
+                    {{ form_widget(outingCreationForm.campus) }}
+                </div>
+                <div class="input-wrapper">
+                    <label>{{ form_label(outingCreationForm.town) }} :</label>
+                    {{ form_widget(outingCreationForm.town) }}
+                </div>
+                <div class="input-wrapper">
+                    <label>{{ form_label(outingCreationForm.place) }} :</label>
+                    {{ form_widget(outingCreationForm.place) }}
+                    {% if app.user.isAdmin %}
+                        <a href="{{ addPlacesUrl }}" target="_blank" title="Nouveau lieu"><ion-icon name="add-circle" class="add-button"></ion-icon></a>
+                    {% endif %}
+                </div>
+                <div class="input-wrapper">
+                    <label>{{ form_label(outingCreationForm.street) }} :</label>
+                    {{ form_widget(outingCreationForm.street) }}
+                </div>
+                <div class="input-wrapper">
+                    <label>{{ form_label(outingCreationForm.postal_code) }} :</label>
+                    {{ form_widget(outingCreationForm.postal_code) }}
+                </div>
+                <div class="input-wrapper">
+                    <label>{{ form_label(outingCreationForm.latitude) }} :</label>
+                    {{ form_widget(outingCreationForm.latitude) }}
+                </div>
+                <div class="input-wrapper">
+                    <label>{{ form_label(outingCreationForm.longitude) }} :</label>
+                    {{ form_widget(outingCreationForm.longitude) }}
+                </div>
+                <!--<button id="addPlace"><img href="" alt="Nouveau Lieu"/></button>-->
+            </div>
+        </div>
     </div>
 
-    {{ form_row(outingCreationForm.name) }}
-    {{ form_row(outingCreationForm.startAt) }}
-    {{ form_row(outingCreationForm.limitSubscriptionDate) }}
-    {{ form_row(outingCreationForm.maxUsers) }}
-    {{ form_row(outingCreationForm.duration) }}
-    {{ form_row(outingCreationForm.about) }}
-    {{ form_row(outingCreationForm.campus) }}
-
-    <div>
-        {{ form_row(outingCreationForm.town) }}
-        {{ form_row(outingCreationForm.place) }}
-        {{ form_row(outingCreationForm.street) }}
-        {{ form_row(outingCreationForm.postal_code) }}
-        {{ form_row(outingCreationForm.latitude) }}
-        {{ form_row(outingCreationForm.longitude) }}
-        <!--<button id="addPlace"><img href="" alt="Nouveau Lieu"/></button>-->
-    </div>
-
-    <div>
+    <div id="form-actions">
         {{ form_row(outingCreationForm.save) }}
         {{ form_row(outingCreationForm.publish) }}
-        <button type="button" id="cancel"
+        <button class="outline" type="button" id="cancel"
                 onclick="confirmCancel()">
             Annuler
         </button>
     </div>
 
     {{ form_end(outingCreationForm) }}
-</div>
+    </div>
 {% endblock %}
 
