--- a/public/assets/css/pages/home.css
+++ b/public/assets/css/pages/home.css
@@ -26,6 +26,12 @@
     justify-content: space-between;
 }
 
+@media screen and (max-width: 920px) {
+    .form-right {
+        max-width: 182px;
+    }
+}
+
 .form-left{
     display: flex;
     flex-direction: column;
@@ -92,4 +98,42 @@
     align-items: center;
     justify-content: center;
     margin-top: 10px;
+}
+
+@media screen and (max-width: 980px) {
+    .registered {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 865px) {
+    .organizer {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    #precontent {
+        align-items: center;
+    }
+    .wrapper {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .wrapper .search {
+        margin-top: 10px;
+    }
+}
+
+@media screen and (max-width: 645px) {
+    .limit-date {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 520px) {
+    .nb-registered {
+        display: none;
+    }
 }
