--- a/public/assets/css/pages/outing_forms.css
+++ b/public/assets/css/pages/outing_forms.css
@@ -17,6 +17,7 @@
 
 #form-actions {
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     margin-top: 24px;
@@ -24,4 +25,45 @@
 
 #form-actions * {
     margin-right: 32px;
+}
+
+#outing_startAt_date {
+    margin-right: 6px;
+    max-width: 132px;
+}
+
+#outing_startAt_time {
+    max-width: 75px;
+}
+
+@media screen and (max-width: 790px) {
+    #form-inputs,
+    #form-actions {
+        flex-direction: column;
+    }
+
+    #form-actions * {
+        margin-bottom: 16px;
+        margin-right: 0;
+    }
+
+    #left-part {
+        margin-right: 0;
+    }
+
+    #form-inputs .input-wrapper {
+        width: 80vw;
+    }
+}
+
+@media screen and (max-width: 412px) {
+    #form-inputs .input-wrapper input,
+    #form-inputs .input-wrapper select,
+    #form-inputs .input-wrapper textarea {
+        max-width: 100px;
+    }
+
+    #form-inputs .input-wrapper label {
+        max-width: 125px;
+    }
 }
