--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome to the Dream Team!{% endblock %}</title>
+        <title>{% block title %}Sortir{% endblock %}</title>
         <link rel="icon" type="image/svg+xml" href="{{ asset('assets/images/favicon.svg') }}">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
