--- a/public/assets/css/forms.css
+++ b/public/assets/css/forms.css
@@ -26,6 +26,7 @@
 }
 
 input,
+.input,
 textarea,
 select {
     padding: 8px 12px;
@@ -34,7 +35,8 @@ select {
     font-size: 16px;
 }
 
-label {
+label,
+.label{
     font-size: 18px;
 }
 
