--- a/templates/fragments/_navbar_links.html.twig
+++ b/templates/fragments/_navbar_links.html.twig
@@ -4,7 +4,7 @@
     {% if app.user.isAdmin %}
         {% set townUrl = ea_url().setController('App\\Controller\\Admin\\TownCrudController') %}
         {% set campusUrl = ea_url().setController('App\\Controller\\Admin\\CampusCrudController') %}
-        {#<li><a href="{{ path('admin') }}">Panneau d'administration</a></li>#}
+        <li><a href="{{ path('admin') }}">Panneau d'administration</a></li>
         <li><a href="{{ townUrl }}">Villes</a></li>
         <li><a href="{{ campusUrl }}">Campus</a></li>
     {% endif %}
